fix(index.css): scrolling gap fix

--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,6 @@ code {
 }
 
 .content_block {
-  background: gray;
+  background: white;
   margin: 30px 30px 0;
-}
-
-.sidebar_block {
-  background-color: white;
-  height:  100vh;
-}
-
-.content_block__elem {
-   background-color: white;
-    height: 95vh;
 }
